# inazuma-eleven-victory-road-macro

./: .gitignore  .tufup-repo-config  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  renew.yml
config/: __init__.py  config.py  paths.py
config/json/: exported-config.json  passive-criteria.schema.json  profile.schema.json
config/toml/: cli.toml  settings.toml  typer.toml
macros/: match.vml
macros/match/: chronicle_match.vml  free_match.vml
profiles/shared/: profile.json
profiles/shared/macros/: chronicle_match.vml  opening-animus.vml
profiles/shared/passive-criteria/: justice-perfect.json
repo/metadata/: root.json  snapshot.json  targets.json  timestamp.json
scripts/: build.ps1
src/actions/: __init__.py  focus_window.py  image_on_screen.py  key_hold.py  key_press.py  mouse_click.py
src/api/: __main__.py  app.py
src/application/: __init__.py  system_info.py  system_os_detector.py  windowing_system_detector.py
src/application/enums/: __init__.py  chronicle_match_difficulty.py  game_action.py  language.py  pipeline_context_keys.py  system_os.py
src/application/match/: __init__.py  match_command_config.py  match_command_pipeline.py  match_config.py  match_pipeline.py
src/commands/: __main__.py
src/commands/helpers/: __init__.py  prompt_enum.py  prompt_if_none.py  prompt_macro.py  select_passive_criteria.py  select_profile.py
src/commands/macro/: __init__.py  chronicle_match_command.py  macro.py  opening_animus_command.py
src/dsl/builder/: pipeline_builder.py
src/dsl/compiler/: __init__.py  pipeline_compiler.py
src/dsl/lexer/: lexer.py
src/dsl/parser/: __init__.py  nodes.py  parser.py
src/dsl/registry/: __init__.py  action_registry.py  rule_attribute_registry.py  rule_registry.py  step_attribute_registry.py
src/dsl/specs/: __init__.py  argument_spec.py  attribute_spec.py  callable_spec.py
src/dsl/token/: __init__.py  token.py  token_stream.py  token_type.py
src/dsl/typing/: __init__.py  argument_converter.py
src/enums/: __init__.py  file_ext.py  ie_game.py  key.py  language.py  mouse_button.py
src/helpers/fs/: __init__.py  copying.py  creating.py  deleting.py  (+2 more)
src/logging/: __init__.py  factory.py  logger.py  logger_config.py  template_renderer.py
src/macros/: chronicle_match.py
src/pipeline/: condition_rule.py  flow_context.py  pipeline.py  step.py
src/tufup/: __init__.py  github_repository.py  tufup_updater.py
src/vision/: __init__.py  capture_screenshot.py  engine.py  matcher.py  region.py  region_resolver.py  screen.py  template.py
src/window/: __init__.py  window_context_resolver.py  window_controller.py
wheels/: vgamepad-0.1.0-py3-none-any.whl
(+204 files in other folders)
